Update TestDataCreation
Include new user with new Cart (in Order). Remove Payment Method test data.